LU-633 iokit: mdt-survey script for MD echo client test
Create a mdt-survey script to run echo client for MD

Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: I2d75de5c28b70a3b8474ed8512389d850c77e638

--- a/lustre-iokit/lustre-iokit.spec.in
+++ b/lustre-iokit/lustre-iokit.spec.in
@@ -38,6 +38,9 @@ This script will collect IO stats on a defined set of nodes.
 ior-survey:
 A script to run the IOR benchmark. The latest version can be downloaded from http://www.llnl.gov/asci/purple/benchmarks/limited/ior/
 
+mdt-survey:
+A script to run md echo client for mdt performance
+
 %prep
 %setup -qn %{name}-%{version}
 
@@ -62,9 +65,11 @@ make install DESTDIR=$RPM_BUILD_ROOT
 /usr/bin/lstats.sh
 /usr/bin/gather_stats_everywhere.sh
 /usr/bin/config.sh
+/usr/bin/mdt-survey
 %doc obdfilter-survey/README.obdfilter-survey
 %doc ior-survey/README.ior-survey
 %doc ost-survey/README.ost-survey
+%doc mdt-survey/README.mdt-survey
 %doc sgpdd-survey/README.sgpdd-survey
 %doc stats-collect/README.lstats.sh
 
