LU-954 build: make lbuild to build lustre-iokit
Add additional codes in lbuild to build lustre-iokit rpm.
It should be noarch because it's independent of any arch.

Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: I8b3c0bbaf348c350155d7c50e9ffcb4ec92fe1ff

--- a/lustre-iokit/configure.ac
+++ b/lustre-iokit/configure.ac
@@ -1,6 +1,6 @@
-AC_INIT
+AC_INIT(lustre-iokit,1.2)
 AC_CONFIG_AUX_DIR([.])
-AM_INIT_AUTOMAKE(lustre-iokit,1.2)
+AM_INIT_AUTOMAKE([1.9 tar-ustar])
 AC_PATH_PROGS(BASH, bash)
 AC_PATH_PROGS(PERL, perl)
 RELEASE="`date +%Y%m%d%H%M`"
