--- a/lustre-iokit/lustre-iokit.spec.in
+++ b/lustre-iokit/lustre-iokit.spec.in
@@ -10,7 +10,7 @@ Release: %{release}
 License: GPL
 Group: Applications/System
 Source: %{name}-%{version}.tar.gz
-URL: http://www.sun.com/software/products/lustre/index.xml
+URL: http://wiki.whamcloud.com/
 BuildRoot: /var/tmp/%{name}-%{version}-root
 Provides: %{name} = %{version}
 BuildArch: noarch
@@ -19,7 +19,7 @@ Requires: python > 2.2, sg3_utils
 %description
 This package includes five tools:
 sgpdd-survey:
-A test of the 'bare metal' performance, bypassing as much of the kernel as we can. Uses the sgp_dd utility. 
+A test of the 'bare metal' performance, bypassing as much of the kernel as we can. Uses the sgp_dd utility.
 
 obdfilter-survey 
 This survey can be run in 3 modes to test disk I/O including the filesystem,
@@ -70,6 +70,8 @@ make install DESTDIR=$RPM_BUILD_ROOT
 
 
 %changelog
+* Fri Dec 30 2010 Minh Diep
+- WhamCloud release for bug fixes
 * Tue Jul 24 2007 Cliff White
 - Added stats-collect
 * Mon Apr 9 2007 Cliff White
