LU-954 build: make lbuild to build lustre-iokit
Add additional codes in lbuild to build lustre-iokit rpm.
It should be noarch because it's independent of any arch.
Add info to Changelog and change iokit version to 1.3.0

Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: I8b3c0bbaf348c350155d7c50e9ffcb4ec92fe1ff

--- a/lustre-iokit/lustre-iokit.spec.in
+++ b/lustre-iokit/lustre-iokit.spec.in
@@ -10,7 +10,7 @@ Release: %{release}
 License: GPL
 Group: Applications/System
 Source: %{name}-%{version}.tar.gz
-URL: http://www.sun.com/software/products/lustre/index.xml
+URL: http://wiki.whamcloud.com/
 BuildRoot: /var/tmp/%{name}-%{version}-root
 Provides: %{name} = %{version}
 BuildArch: noarch
@@ -76,3 +76,5 @@ make install DESTDIR=$RPM_BUILD_ROOT
 - Merged with existing, changed to .in format.
 * Thu Oct 4 2006  Kalpak Shah
 - Created the spec file.
+* Fri Dec 30 2010 Minh Diep
+- WhamCloud release for bug fixes
