--- a/lustre/kernel_patches/targets/2.6-rhel6.target.in
+++ b/lustre/kernel_patches/targets/2.6-rhel6.target.in
@@ -1,5 +1,5 @@
 lnxmaj="2.6.32"
-lnxrel="131.17.1.el6"
+lnxrel="220.el6"
 
 KERNEL_SRPM=kernel-${lnxmaj}-${lnxrel}.src.rpm
 SERIES=2.6-rhel6.series
@@ -7,7 +7,7 @@ EXTRA_VERSION=${lnxrel}_lustre.@VERSION@
 LUSTRE_VERSION=@VERSION@
 
 DEVEL_PATH_ARCH_DELIMETER="."
-OFED_VERSION=inkernel
+OFED_VERSION=1.5.4
 
 BASE_ARCHS="i686 x86_64 ia64 ppc64"
 BIGMEM_ARCHS=""
