LU-991 lmv: cleanup lmv for dne phase I
1. remove lmv object to use lmv_stripe_info directly.
2. Separate lmv_stripe_info with lmv_md_info.
3. Remove several obsolete CMD codes on llite/lmv.

Signed-off-by: Di Wang <di.wang@whamcloud.com>
Change-Id: I357c11a7d220b2af7d69678bf6c70ed291db5f35

--- a/lustre/lmv/autoMakefile.am
+++ b/lustre/lmv/autoMakefile.am
@@ -36,7 +36,7 @@
 
 if LIBLUSTRE
 noinst_LIBRARIES = liblmv.a
-liblmv_a_SOURCES = lmv_obd.c lmv_intent.c lmv_object.c lmv_fld.c
+liblmv_a_SOURCES = lmv_obd.c lmv_intent.c lmv_fld.c
 liblmv_a_CPPFLAGS = $(LLCPPFLAGS)
 liblmv_a_CFLAGS = $(LLCFLAGS)
 endif
