--- a/lustre/lmv/Makefile.in
+++ b/lustre/lmv/Makefile.in
@@ -1,4 +1,4 @@
 MODULES := lmv
-lmv-objs := lmv_obd.o lmv_intent.o lmv_fld.o lmv_object.o lproc_lmv.o
+lmv-objs := lmv_obd.o lmv_intent.o lmv_fld.o lproc_lmv.o
 
 @INCLUDE_RULES@
