LU-1032 build: DKMS RPM for Lustre Client modules
Permit Lustre Client (only) modules DKMS RPM creation.

This patch is a follow on to the first set of patches for LU-1032
that only allowed for the creation of Lustre Server (zfs only)
modules DKMS RPM.

Also remove nodemap module, no longer builded since Gerrit change
83f04354ff68a14d7492e35a9576c91492a1206c, for LU-4647.

Also implements feature of DKMS RPM creation from Makefile
(thanks to mjmac), now in 2 separate SRPM/RPM steps and for both
Client and Server versions.

Also use an auto-increment (Array[${#Array[@]}]=) operator in
dkms.conf modules declarations to help for future changes when
there will be a need to add/delete modules.

Change in lustre/utils Makefile has been required to allow
building of ptlrpc_gss module with --enable-gss and without the
need to specify --enable-utils which was causing an unexpected
zfs user-land dependency for DKMS Server build.

Signed-off-by: Michael MacDonald <michael.macdonald@intel.com>
Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: I278d50307a17fe49a06392351890946b7dd3557a

--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -114,6 +114,29 @@ rpm-local:
 	$(MKDIR_P) $(rpmbuilddir)/SPECS && \
 	$(MKDIR_P) $(rpmbuilddir)/SOURCES)
 
+%{module}-dkms-srpm: dist
+	rpmbuilddir=`mktemp -t -d rpmbuild-@PACKAGE@-$$USER-XXXXXXXX`; \
+	$(MAKE) $(AM_MAKEFLAGS) \
+		rpmbuilddir="$$rpmbuilddir" rpm-local || exit 1; \
+	$(RPMBUILD) \
+		--define "_tmppath $$rpmbuilddir/TMP" \
+		--define "_topdir $$rpmbuilddir" \
+		--define "_sourcedir $(top_srcdir)" \
+		@RPMBUILD_BINARY_ARGS@ \
+		--bs lustre-dkms.spec || exit 1; \
+	cp $$rpmbuilddir/SRPMS/*.src.rpm $(top_srcdir) || exit 1; \
+	rm -rf $$rpmbuilddir
+
+%{module}-dkms-rpm: %{module}-dkms-srpm
+	rpmbuilddir=`mktemp -t -d rpmbuild-@PACKAGE@-$$USER-XXXXXXXX`; \
+	$(RPMBUILD) \
+		--define "_tmppath $$rpmbuilddir/TMP" \
+		--define "_topdir $$rpmbuilddir" \
+		@RPMBUILD_BINARY_ARGS@ \
+		--rebuild %{module}-dkms-*.src.rpm || exit 1; \
+	cp $$rpmbuilddir/RPMS/*/*.rpm $(top_srcdir) || exit 1; \
+	rm -rf $$rpmbuilddir
+
 rpms: srpm
 	rpmbuilddir=`mktemp -t -d rpmbuild-@PACKAGE@-$$USER-XXXXXXXX`; \
 	$(MAKE) $(AM_MAKEFLAGS) \
