LU-6246 tests: integrate CCAN JSON
Update the Makefiles.

Compile the CCAN JSON tests and integrate them into the testsuite.

Move the JSON test files from utils/ to tests/.

Signed-off-by: frank zago <fzago@cray.com>
Change-Id: Ic702f0ee0541f94e1094dd8bbe790264552f1f3b

--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -174,7 +174,9 @@ wiretest_SOURCES = wiretest.c
 
 endif # UTILS
 
-EXTRA_DIST = llstat llobdstat plot-llstat ldlm_debug_upcall
+EXTRA_DIST = llstat llobdstat plot-llstat ldlm_debug_upcall \
+	ccan/json/json.c ccan/json/json.h \
+	ccan/json/_info ccan/json/LICENSE
 
 # NOTE: this should only be run on i386.
 newwiretest: wirehdr.c wirecheck
