--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -3,9 +3,10 @@
 # Declare rpmbuild --with/--without parameters
 %bcond_without servers
 %bcond_without ldiskfs
-%bcond_with zfs
+%bcond_without zfs
 %bcond_without lustre_tests
 %bcond_without lustre_iokit
+%bcond_with lustre_modules
 
 %if %{without servers}
     # --without servers overrides --with {ldiskfs|zfs}
@@ -100,9 +101,6 @@ Obsoletes: lustre-lite, lustre-lite-utils, lustre-ldap nfs-utils-lustre
 Provides: lustre-lite = %{version}, lustre-lite-utils = %{version}
 Requires: %{name}-modules = %{version}
 BuildRequires: libtool
-%if %{with servers}
-Requires: lustre-osd
-%endif
 %if %{defined cross_requires}
 Requires: %{cross_requires}
 AutoReqProv: no
@@ -144,7 +142,7 @@ Lustre file system, server and network drivers for Linux %{kversion}.
 %if %{with ldiskfs}
 %package osd-ldiskfs
 Summary: osd-ldiskfs contains both ldiskfs and its osd interface in Lustre.
-Requires: lustre-modules = %{version}
+Requires: lustre-osd-ldiskfs-kmod = %{version}
 Requires: modutils >= 2.4.10
 Requires: ldiskfsprogs >= 1.42.7.wc1
 Provides: lustre-osd
@@ -162,7 +160,15 @@ backing store of a Lustre server.
 %if %{with zfs}
 %package osd-zfs
 Summary: osd-zfs is the mandatory glue for ZFS support in Lustre.
-Requires: lustre-modules = %{version}, zfs-kmod
+%if %{undefined zfs_buildrequires}
+BuildRequires: libzfs2-devel
+%if %{with lustre_modules}
+BuildRequires: kmod-zfs-devel kmod-spl-devel
+%endif
+%else
+BuildRequires: %{zfs_buildrequires}
+%endif
+Requires: lustre-osd-zfs-kmod = %{version}
 Provides: lustre-osd
 Group: Development/Kernel
 
