LU-6707 test: load loop module to have loop devices
Since there is no default loop device on EL7, load
loop module with option max_loop=8 to have loop devices
ready. Also on EL7, stropts.h and xtitypes.h are missing,
install package mpss-sdk-k1om for the two headers.

Test-Parameters: alwaysuploadlogs \
envdefinitions=SLOW=yes,ENABLE_QUOTA=yes \
mdtfilesystemtype=ldiskfs mdsfilesystemtype=ldiskfs \
ostfilesystemtype=ldiskfs clientdistro=el7 ossdistro=el6.6 \
mdsdistro=el6.6 clientarch=x86_64 ossarch=x86_64 mdsarch=x86_64 \
mdtcount=1 mdssizegb=3 ostcount=7 ostsizegb=3 \
testlist=posix

Change-Id: I9fb9eba15099e5569dbc04fcd4454656a59fdd52
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/lustre/tests/posix/posix.cfg
+++ b/lustre/tests/posix/posix.cfg
@@ -98,11 +98,14 @@ prep() {
     [[ -f $TEST_BIN ]] && rm -f $TEST_BIN
     [[ -d $INSTALL_DIR ]] && rm -rf $INSTALL_DIR
 
-	if egrep -q "CentOS|Red Hat|Fedora" /etc/issue; then
+	if egrep -q "CentOS|Red Hat|Fedora" /etc/system-release; then
 		local prefix=/usr/lib/$(uname -m)-redhat-linux5E
 		if egrep -q "Fedora" /etc/issue; then
 			prefix=/usr/arm-gp2x-linux
 		fi
+		local ver=$(uname -r | awk -F . '{print $6}')
+		[[ "$ver" == "el7" ]] &&
+			prefix=/opt/mpss/3.4.3/sysroots/k1om-mpss-linux
 
 		[[ -d /usr/include/bits ]] || mkdir -p /usr/include/bits
 		[[ -d /usr/include/sys ]] || mkdir -p /usr/include/sys
