LU-6696 llog: tool to fix corrupted llog catalog
This tool check the llog catalog validity and fix llog if needed.
The main purpose is to make llog catalog working again, tool
searches for valid records, restores invalid one and correct the
llog header after all.

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: Ibd38c2c3af8a9ea865bad51f50f527f11f83fd8c

--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -33,7 +33,8 @@ endif # TESTS
 
 if SERVER
 sbin_PROGRAMS += mkfs.lustre tunefs.lustre llverdev lr_reader \
-	ll_recover_lost_found_objs ll_decode_filter_fid llog_reader
+	ll_recover_lost_found_objs ll_decode_filter_fid llog_reader \
+	llog_catfix
 endif
 if LIBPTHREAD
 sbin_PROGRAMS += lhsmtool_posix
@@ -117,6 +118,7 @@ llog_reader_SOURCES = llog_reader.c
 llog_reader_LDADD := $(LIBPTLCTL) liblustreapi.a
 llog_reader_DEPENDENCIES := $(LIBPTLCTL) liblustreapi.a
 
+llog_catfix_SOURCES = llog_catfix.c
 lr_reader_SOURCES = lr_reader.c
 
 if UTILS
