LU-6696 llog: tool to fix corrupted llog catalog
This tool check the llog catalog validity and fix llog if needed.
The main purpose is to make llog catalog working again, tool
searches for valid records, restores invalid one and correct the
llog header after all.

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: Ibd38c2c3af8a9ea865bad51f50f527f11f83fd8c

--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -25,7 +25,7 @@ EXTRA_PROGRAMS = wirecheck
 # mount only finds helpers in /sbin
 rootsbin_PROGRAMS = mount.lustre
 sbin_PROGRAMS = lctl wiretest l_getidentity llverfs llverdev \
-	llog_reader lr_reader lshowmount lustre_rsync \
+	llog_catfix llog_reader lr_reader lshowmount lustre_rsync \
 	ll_recover_lost_found_objs ltrack_stats ll_decode_filter_fid
 if SERVER
 sbin_PROGRAMS += mkfs.lustre tunefs.lustre
@@ -119,6 +119,7 @@ llog_reader_SOURCES = llog_reader.c
 llog_reader_LDADD := $(LIBPTLCTL)
 llog_reader_DEPENDENCIES := $(LIBPTLCTL)
 
+llog_catfix_SOURCES = llog_catfix.c
 lr_reader_SOURCES = lr_reader.c
 
 if UTILS
