--- a/lustre/kernel_patches/targets/3.12-sles12.target.in
+++ b/lustre/kernel_patches/targets/3.12-sles12.target.in
@@ -1,10 +1,10 @@
 lnxmaj="3.12"
-lnxmin=".39"
-lnxrel="47"
+lnxmin=".51"
+lnxrel="60.20"
 # use this when there is an "RPM fix" which means that the name of the
 # (source) RPM has been updated but the version of the kernel inside the
 # RPM is not also updated
-rpmfix=".1"
+rpmfix=".2"
 
 # this is the delimeter that goes before the "smp" at the end of the version
 # defaults to empty
@@ -12,6 +12,7 @@ FLAVOR_DELIMITER="-"
 
 KERNEL_SRPM=kernel-source-${lnxmaj}${lnxmin}-${lnxrel}${rpmfix}.src.rpm
 SERIES=3.12-sles12.series
+LDISKFS_SERIES=3.12-sles12sp1.series
 VERSION=$lnxmaj
 EXTRA_VERSION="${lnxmin#.}-${lnxrel}_lustre.@VERSION@"
 LUSTRE_VERSION=@VERSION@
