LU-5597 build: Ensure MOFED Module symvers are used
During configure Modules.symvers is changed to include OFED symbols
but they are lost during dkms build.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: I4a6ee59f4e4eed9f878ad52993b8b17426f19d4a

--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -219,7 +219,21 @@ if ZFS_ENABLED
 	fi
 endif # ZFS_ENABLED
 
-module-symvers: module-symvers-zfs
+module-symvers-ofed:
+if BUILD_O2IBLND
+	@if [ -n "@O2IB_SYMVERFILE@" && -f "@O2IB_SYMVERFILE@" ]; then \
+		if test -f @SYMVERFILE@; then \
+			egrep -v $(echo $(awk '{ print $2 }' @O2IB_SYMVERFILE@) | tr ' ' '|') @SYMVERFILE@ > @SYMVERFILE@.old; \
+		else \
+		    touch @SYMVERFILE@.old; \
+		fi; \
+		cat @SYMVERFILE@.old @O2IB_SYMVERFILE@ > @SYMVERFILE@; \
+		rm @SYMVERFILE@.old; \
+		cat "@O2IB_SYMVERFILE@" >>@SYMVERFILE@; \
+	fi
+endif # BUILD_O2IBLND
+
+module-symvers: module-symvers-ofed module-symvers-zfs
 
 CSTK=/tmp/checkstack
 CSTKO=/tmp/checkstack.orig
