--- a/lustre/tests/.gitignore
+++ b/lustre/tests/.gitignore
@@ -21,6 +21,7 @@
 /flocks_test
 /fsx
 /getdents
+/group_lock_test
 /listxattr_size_check
 /iopentest1
 /iopentest2
@@ -30,6 +31,8 @@
 /ll_getstripe_info
 /ll_sparseness_verify
 /ll_sparseness_write
+/llapi_fid_test
+/llapi_hsm_test
 /llverdev
 /llverfs
 /logs
@@ -53,6 +56,7 @@
 /openfilleddirunlink
 /openme
 /openunlink
+/orphan_linkea_check
 /ostactive
 /reads
 /rename_many
@@ -60,6 +64,7 @@
 /runas
 /rwv
 /sendfile
+/sendfile_grouplock
 /setuid
 /sleeptest
 /small_write
