LU-0000 utils: an infrastructure to benchmark OSD
using requests in OUT format.

Test-Parameters: fortestonly

Change-Id: Ic595ebc56cc32654c58a9922570e3296183390a4
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>

--- a/lustre/obdecho/Makefile.in
+++ b/lustre/obdecho/Makefile.in
@@ -1,6 +1,9 @@
 MODULES := obdecho
+@SERVER_TRUE@MODULES += osdbench
 obdecho-objs := echo_client.o
 @SERVER_TRUE@obdecho-objs += echo.o
+
+osdbench-objs := osdbench.o
 
 EXTRA_DIST = $(obdecho-objs:%.o=%.c) echo_internal.h
 @SERVER_FALSE@EXTRA_DIST += echo.c
