--- a/lustre/obdecho/Makefile.in
+++ b/lustre/obdecho/Makefile.in
@@ -1,6 +1,9 @@
 MODULES := obdecho
+@SERVER_TRUE@MODULES += osdgate
 obdecho-objs := echo_client.o
 @SERVER_TRUE@obdecho-objs += echo.o
+
+osdgate-objs := osdbench.o
 
 EXTRA_DIST = $(obdecho-objs:%.o=%.c) echo_internal.h
 @SERVER_FALSE@EXTRA_DIST += echo.c
