LU-0000 utils: an infrastructure to benchmark OSD
using requests in OUT format.

Test-Parameters: fortestonly

Change-Id: Ic595ebc56cc32654c58a9922570e3296183390a4
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>

--- a/lustre/obdecho/autoMakefile.am
+++ b/lustre/obdecho/autoMakefile.am
@@ -39,7 +39,7 @@
 if MODULES
 
 if LINUX
-modulefs_DATA = obdecho$(KMODEXT)
+modulefs_DATA = obdecho$(KMODEXT) osdgate$(KMODEXT)
 endif # LINUX
 
 endif # MODULES
