LU-7090 deb: fix serval IB paths for configure
macro O2IBPATHS might be "$LINUX $LINUX/drivers/infiniband".
--with-o2ib only expect one string assignment here.

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I86172056c57ec8e649c2e56455369e66bbbe3513

--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -176,7 +176,7 @@ debs:
 	export MA_DIR=$$(pwd)/usr_share_modass && \
 	KVERS=$${KVERS:-$(LINUXRELEASE)} && \
 	[ "x@ENABLEO2IB@" != "x" ] && \
-	export IB_OPTIONS="--with-o2ib=@O2IBPATHS@" && \
+	export IB_OPTIONS="--with-o2ib=@O2IBPATH@" && \
 	export KSRC_TREE=$(LINUX) && \
 	KSRC=$${KSRC:-$(LINUX_OBJ)} && \
 	m-a build $${KSRC:+-k $$KSRC} $${KVERS:+-l $$KVERS} -i -u $$(pwd) lustre && \
