Allow whamcloud-developers to rebase patches.

--- a/project.config
+++ b/project.config
@@ -24,6 +24,7 @@
 	editTopicName = group lustre-submitters
 	pushSignedTag = group lustre-mirror
 	pushSignedTag = group lustre-submitters
+	rebase = group whamcloud-developers
 [access "refs/for/refs/*"]
 	push = group Registered Users
 	pushMerge = group Registered Users
