--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -74,7 +74,7 @@ lustre-sources:
 if LINUX
 all-am: modules
 
-modules: ldiskfs-sources lustre-sources
+modules: undef.h ldiskfs-sources lustre-sources
 	$(MAKE) CC="$(CC)" $(CROSS_VARS) -C $(LINUX_OBJ)	     \
 	-f $(PWD)/build/Makefile LUSTRE_LINUX_CONFIG=$(LINUX_CONFIG) \
 	LINUXINCLUDE='-I$$(srctree)/arch/$$(SRCARCH)/include -Iarch/$$(SRCARCH)/include/generated -Iinclude $$(if $$(KBUILD_SRC),-Iinclude2 -I$$(srctree)/include) -I$$(srctree)/arch/$$(SRCARCH)/include/uapi -Iarch/$$(SRCARCH)/include/generated/uapi -I$$(srctree)/include/uapi -Iinclude/generated/uapi -include $(CONFIG_INCLUDE)' \
@@ -84,7 +84,10 @@ endif # LINUX
 
 endif # MODULES
 
-dist-hook:
+undef.h: config.h.in
+	grep -v config.h.in config.h.in > $@
+
+dist-hook: undef.h
 	find $(distdir) -name .deps -o \
 			-name CVS -o \
 			-name .svn -o \
@@ -97,7 +100,9 @@ dist-hook:
 EXTRA_DIST = @PACKAGE_TARNAME@.spec	\
 	build/Makefile 			\
 	build/Rules.in			\
-	build/gen_filelist.sh
+	build/gen_filelist.sh		\
+	config.h.in			\
+	undef.h
 
 rpm-local:
 	@(if test -z "$(RPMBUILD)"; then \
@@ -188,8 +193,6 @@ debs:
 	   ../lustre-utils_$${VER}_*.deb ../lustre_$${VER}.dsc \
 	   ../lustre_$${VER}_*.changes ../lustre_$${VER}.tar.gz \
 	   ../lustre-client-modules-$${KVERS}_$${VER}_*.deb debs/
-
-EXTRA_DIST += config.h.in
 
 if USES_DPKG
 EXTRA_DIST += debian/*
