--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -253,14 +253,9 @@ checkstack-clean:
 	rm -f ${CSTK} ${CSTKO}
 
 module-dist-hook:
-	@if [ -d .git ]; then \
-		perl lustre/scripts/version_tag.pl \
-			--make_META > $(distdir)/META; \
-	elif [ -f META ]; then \
+	@if [ -f META ]; then \
 		cp META $(distdir)/META; \
 	else \
-		echo -e "\n" \
-		"*** I have no idea how to create a META file in $(distdir).\n"\
-		"*** Please file a bug at https://jira.hpdd.intel.com/\n"; \
-		exit 1; \
+		perl lustre/scripts/version_tag.pl \
+			--make_META > $(distdir)/META; \
 	fi
