Modify access rules

--- a/project.config
+++ b/project.config
@@ -16,8 +16,8 @@
 	forgeAuthor = group lustre-submitters
 	forgeCommitter = group lustre-mirror
 	forgeCommitter = group lustre-submitters
-	push = +force group lustre-mirror
-	push = +force group lustre-submitters
+	push = group lustre-mirror
+	push = group lustre-submitters
 	pushTag = group lustre-mirror
 	pushTag = group lustre-submitters
 	abandon = group lustre-admin
