LU-7101 lnet: per NI map-on-demand value
Enables support of different map-on-demand values per NI.  This is
required to support OPA coexistence with MLX5 cards.  MLX5 does not
support FMR, which is enabled via map-on-demand.  However OPA's
performance is greatly enahanced when FMR is enabled.  In order
to enable coexistence of both of these two types of cards we
need to be able to set different map-on-demand values for both
NIs.

This patch also lays the ground work for other per NI tunables to
be added in future patches.

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Signed-off-by: James Simmons <uja.ornl@yahoo.com>
Change-Id: Ic7617d3d5846e58f83e7c67bb9eb7173700be8d7

--- a/lnet/utils/lnetconfig/Makefile.am
+++ b/lnet/utils/lnetconfig/Makefile.am
@@ -37,7 +37,7 @@ noinst_LIBRARIES = liblnetconfigtmp.a
 
 CYAML := $(top_builddir)/lnet/utils/cyaml/cyaml.c \
 	 $(top_builddir)/lnet/utils/cyaml/cyaml.h
-liblnetconfigtmp_a_SOURCES := liblnetconfig.c liblnetconfig.h $(CYAML)
+liblnetconfigtmp_a_SOURCES := liblnetconfig.c liblnetconfig_ib.c liblnetconfig.h liblnd.h $(CYAML)
 
 # build static and share lib lnet config library
 liblnetconfig.a : liblnetconfigtmp.a
