--- a/project.config
+++ b/project.config
@@ -30,6 +30,7 @@
 	pushMerge = group Registered Users
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group lustre-approvers
+	label-Verified = -1..+1 group lustre-verifiers
 	label-Verified = -1..+1 group whamcloud-developers
 	submit = group lustre-submitters
 [access "refs/for/refs/heads/*"]
