--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -84,7 +84,8 @@ liblustreapitmp_a_SOURCES = liblustreapi.c liblustreapi_hsm.c \
 			    liblustreapi_nodemap.c lustreapi_internal.h \
 			    liblustreapi_json.c liblustreapi_layout.c \
 			    liblustreapi_lease.c liblustreapi_util.c \
-			    liblustreapi_kernelconn.c $(L_STRING)
+			    liblustreapi_kernelconn.c liblustreapi_ladvise.c \
+			    $(L_STRING)
 
 if UTILS
 # build static and shared lib lustreapi
