LU-6245 libcfs: make libcfs_ioctl.h and lnetctl.h uapi compliant
For UAPI headers the policy is to only have data
structures shared between user land and kernel
space. All non data structures except a reference
to libcfs_ioctl_data_adjust() have been removed.
libcfs_ioctl_data_adjust can go away when the two
module.c files for libcfs will merger. For lnetctl.h
we remove userland only function prototypes.h

Change-Id: I4e09041a7f0b590d7eb81eda32f0bccdfb9d28ac
Signed-off-by: James Simmons <uja.ornl@yahoo.com>

--- a/lnet/utils/Makefile.am
+++ b/lnet/utils/Makefile.am
@@ -56,6 +56,7 @@ endif # BUILD_DLC
 routerstat_SOURCES = routerstat.c
 
 lst_SOURCES = lst.c
+lst_CPPFLAGS = -I$(top_builddir)/lustre
 lst_LDADD = -lptlctl $(LIBCFSUTIL) $(LIBCFS) $(LIBREADLINE) $(LIBEFENCE)
 lst_DEPENDENCIES = libptlctl.a
 
